--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@ body {
 
 <div class="indicadores" id="indicadores"></div>
 
+    <!-- ===== IMAGEM ESTRELAS AVALIAÇÃO ===== -->
+<section class="container-imagem">
+    <img src="estrelasava.jpg" alt="Avaliações 5 Estrelas" class="imagem-topo" draggable="false">
+    <div class="bloqueio"></div>
+</section>
+
+
 <script>
 /* ===== BLOQUEAR DOWNLOAD E INSPECIONAR ===== */
 document.addEventListener("dragstart", e => e.preventDefault());
