--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@ body {
     </a>
 </div>
 
+    <!-- ===== IMAGEM FORMAS DE PAGAMENTO ===== -->
+<section class="container-imagem">
+    <img src="cartoes.jpg" alt="Formas de Pagamento" class="imagem-topo" draggable="false">
+    <div class="bloqueio"></div>
+</section>
+
+
 
 
 <script>
