--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@ body {
     <div class="bloqueio"></div>
 </section>
 
+    <!-- ===== IMAGEM SITE1 ===== -->
+<section class="container-imagem">
+    <img src="site1.jpg" alt="Informações do Produto" class="imagem-topo" draggable="false">
+    <div class="bloqueio"></div>
+</section>
+
+
 
 
 
