--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ body {
 
     <!-- ===== IMAGEM SITE1 ===== -->
 <section class="container-imagem">
-    <img src="site1.jpg" alt="Informações do Produto" class="imagem-topo" draggable="false">
+    <img src="site1.JPG" alt="Informações do Produto" class="imagem-topo" draggable="false">
     <div class="bloqueio"></div>
 </section>
 
