--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@ body {
     <div class="bloqueio"></div>
 </section>
 
+    <!-- ===== IMAGEM SITE2 ===== -->
+<section class="container-imagem">
+    <img src="site2.JPG" alt="Informações do Produto" class="imagem-topo" draggable="false">
+    <div class="bloqueio"></div>
+</section>
 
 
 
