--- a/index.html
+++ b/index.html
@@ -195,6 +195,25 @@ body {
     <div class="bloqueio"></div>
 </section>
 
+    <!-- ===== BOTÃO COMPRAR AGORA ===== -->
+<div class="botao-comprar-container">
+    <a href="https://seulink.com" class="botao-comprar">
+
+        <!-- Ícone Carrinho Branco -->
+        <svg xmlns="http://www.w3.org/2000/svg" 
+             width="24" 
+             height="24" 
+             fill="white" 
+             viewBox="0 0 24 24">
+            <path d="M7 4h-2l-1 2h2l3.6 7.59-1.35 2.44C7.52 17.37 8.48 19 10 19h9v-2h-9l1.1-2h6.45c.75 0 1.41-.41 1.75-1.03L23 6H6.21l-.94-2z"/>
+            <circle cx="10.5" cy="20.5" r="1.5"/>
+            <circle cx="17.5" cy="20.5" r="1.5"/>
+        </svg>
+
+        COMPRAR AGORA
+    </a>
+</div>
+
 
 
 
