--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@ body {
     </a>
 </div>
 
+    <!-- ===== IMAGEM SITE3 ===== -->
+<section class="container-imagem">
+    <img src="site3.JPG" alt="Informações do Produto" class="imagem-topo" draggable="false">
+    <div class="bloqueio"></div>
+</section>
+
 
 
 
