--- a/index.html
+++ b/index.html
@@ -119,7 +119,75 @@ body {
     transform: scale(0.97);
 }
 
+/* ===== CARROSSEL AVALIAÇÕES ===== */
+.avaliacoes-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    padding: 40px 0;
+    background: #f9f9f9;
+}
 
+.avaliacoes {
+    display: flex;
+    transition: transform 0.4s ease;
+}
+
+.avaliacao {
+    min-width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.card-avaliacao {
+    width: 85%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.card-avaliacao img {
+    width: 100%;
+    border-radius: 15px;
+    pointer-events: none;
+}
+
+.estrelas {
+    color: #FFD700;
+    font-size: 22px;
+    margin: 10px 0;
+}
+
+.texto-avaliacao {
+    font-size: 16px;
+    color: #333;
+    line-height: 1.5;
+}
+
+/* ===== SETAS ===== */
+.seta {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #FFD700;
+    color: white;
+    border: none;
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.seta-esquerda {
+    left: 10px;
+}
+
+.seta-direita {
+    right: 10px;
+}
+
+
+    
 </style>
 </head>
 
@@ -221,6 +289,52 @@ body {
 </section>
 
 
+    <!-- ===== CARROSSEL DE AVALIAÇÕES ===== -->
+<section class="avaliacoes-container">
+
+    <button class="seta seta-esquerda" onclick="voltarAvaliacao()">‹</button>
+    <button class="seta seta-direita" onclick="proximaAvaliacao()">›</button>
+
+    <div class="avaliacoes" id="avaliacoes">
+
+        <!-- Avaliação 1 -->
+        <div class="avaliacao">
+            <div class="card-avaliacao">
+                <img src="avaliacao1.jpg" draggable="false">
+                <div class="estrelas">★★★★★</div>
+                <div class="texto-avaliacao">
+                    Produto incrível! Minha energia melhorou muito depois que comecei a usar.
+                </div>
+            </div>
+        </div>
+
+        <!-- Avaliação 2 -->
+        <div class="avaliacao">
+            <div class="card-avaliacao">
+                <img src="avaliacao2.jpg" draggable="false">
+                <div class="estrelas">★★★★★</div>
+                <div class="texto-avaliacao">
+                    Chegou rápido e realmente funciona. Me sinto mais disposto todos os dias.
+                </div>
+            </div>
+        </div>
+
+        <!-- Avaliação 3 -->
+        <div class="avaliacao">
+            <div class="card-avaliacao">
+                <img src="avaliacao3.jpg" draggable="false">
+                <div class="estrelas">★★★★★</div>
+                <div class="texto-avaliacao">
+                    Melhor suplemento natural que já experimentei. Recomendo demais!
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+
 
 
 <script>
@@ -315,6 +429,32 @@ carrossel.addEventListener("mouseup", () => {
 
     atualizarSlide();
 });
+
+/* ===== CONTROLE CARROSSEL AVALIAÇÕES ===== */
+const avaliacoes = document.getElementById("avaliacoes");
+const totalAvaliacoes = 3;
+let indexAvaliacao = 0;
+
+function atualizarAvaliacao() {
+    avaliacoes.style.transform = `translateX(-${indexAvaliacao * 100}%)`;
+}
+
+function proximaAvaliacao() {
+    if (indexAvaliacao < totalAvaliacoes - 1) {
+        indexAvaliacao++;
+        atualizarAvaliacao();
+    }
+}
+
+function voltarAvaliacao() {
+    if (indexAvaliacao > 0) {
+        indexAvaliacao--;
+        atualizarAvaliacao();
+    }
+}
+
+
+
 </script>
 
 </body>
