--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body {
 }
 
 /* ===== CARROSSEL AVALIAÇÕES ===== */
-.avaliacoes-container {
+..avaliacoes-container {
     position: relative;
     width: 100%;
     overflow: hidden;
@@ -130,15 +130,17 @@ body {
 
 .avaliacoes {
     display: flex;
+    width: 300%; /* 3 avaliações = 300% */
     transition: transform 0.4s ease;
 }
 
 .avaliacao {
-    flex: 0 0 100%;
-    max-width: 100%;
+    width: 100%;
+    flex-shrink: 0;
     display: flex;
     justify-content: center;
 }
+
 
 
 
