--- a/index.html
+++ b/index.html
@@ -119,79 +119,6 @@ body {
     transform: scale(0.97);
 }
 
-/* ===== CARROSSEL AVALIAÇÕES ===== */
-..avaliacoes-container {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-    padding: 40px 0;
-    background: #f9f9f9;
-}
-
-.avaliacoes {
-    display: flex;
-    width: 300%; /* 3 avaliações = 300% */
-    transition: transform 0.4s ease;
-}
-
-.avaliacao {
-    width: 100%;
-    flex-shrink: 0;
-    display: flex;
-    justify-content: center;
-}
-
-
-
-
-
-.card-avaliacao {
-    width: 85%;
-    max-width: 500px;
-    text-align: center;
-}
-
-.card-avaliacao img {
-    width: 100%;
-    border-radius: 15px;
-    pointer-events: none;
-}
-
-.estrelas {
-    color: #FFD700;
-    font-size: 22px;
-    margin: 10px 0;
-}
-
-.texto-avaliacao {
-    font-size: 16px;
-    color: #333;
-    line-height: 1.5;
-}
-
-/* ===== SETAS ===== */
-.seta {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #FFD700;
-    color: white;
-    border: none;
-    font-size: 24px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.seta-esquerda {
-    left: 10px;
-}
-
-.seta-direita {
-    right: 10px;
-}
-
 
     
 </style>
@@ -295,51 +222,18 @@ body {
 </section>
 
 
-    <!-- ===== CARROSSEL DE AVALIAÇÕES ===== -->
-<section class="avaliacoes-container">
+<!-- ===== CARROSSEL ===== -->
+<div class="carrossel-container">
+    <div class="carrossel" id="carrossel">
 
-    <button class="seta seta-esquerda" onclick="voltarAvaliacao()">‹</button>
-    <button class="seta seta-direita" onclick="proximaAvaliacao()">›</button>
-
-    <div class="avaliacoes" id="avaliacoes">
-
-        <!-- Avaliação 1 -->
-        <div class="avaliacao">
-            <div class="card-avaliacao">
-                <img src="avaliacao1.jpg" draggable="false">
-                <div class="estrelas">★★★★★</div>
-                <div class="texto-avaliacao">
-                    Produto incrível! Minha energia melhorou muito depois que comecei a usar.
-                </div>
-            </div>
-        </div>
-
-        <!-- Avaliação 2 -->
-        <div class="avaliacao">
-            <div class="card-avaliacao">
-                <img src="avaliacao2.jpg" draggable="false">
-                <div class="estrelas">★★★★★</div>
-                <div class="texto-avaliacao">
-                    Chegou rápido e realmente funciona. Me sinto mais disposto todos os dias.
-                </div>
-            </div>
-        </div>
-
-        <!-- Avaliação 3 -->
-        <div class="avaliacao">
-            <div class="card-avaliacao">
-                <img src="avaliacao3.jpg" draggable="false">
-                <div class="estrelas">★★★★★</div>
-                <div class="texto-avaliacao">
-                    Melhor suplemento natural que já experimentei. Recomendo demais!
-                </div>
-            </div>
-        </div>
-
+        <div class="slide"><img src="ava1.jpg" draggable="false"></div>
+        <div class="slide"><img src="ava2.jpg" draggable="false"></div>
+        <div class="slide"><img src="ava3.jpg" draggable="false"></div>
+        
     </div>
+</div>
 
-</section>
-
+<div class="indicadores" id="indicadores"></div>
 
 
 
@@ -435,38 +329,6 @@ carrossel.addEventListener("mouseup", () => {
 
     atualizarSlide();
 });
-
-/* ===== CONTROLE CARROSSEL AVALIAÇÕES ===== */
-const avaliacoes = document.getElementById("avaliacoes");
-const slidesAvaliacao = document.querySelectorAll(".avaliacao");
-
-let indexAvaliacao = 0;
-
-function atualizarAvaliacao() {
-    avaliacoes.style.transition = "transform 0.4s ease";
-    avaliacoes.style.transform = `translateX(-${indexAvaliacao * 100}%)`;
-}
-
-
-
-function proximaAvaliacao() {
-    if (indexAvaliacao < slidesAvaliacao.length - 1) {
-        indexAvaliacao++;
-    } else {
-        indexAvaliacao = 0; // volta para primeira
-    }
-    atualizarAvaliacao();
-}
-
-function voltarAvaliacao() {
-    if (indexAvaliacao > 0) {
-        indexAvaliacao--;
-    } else {
-        indexAvaliacao = slidesAvaliacao.length - 1; // vai para última
-    }
-    atualizarAvaliacao();
-}
-
 
 
 </script>
