--- a/index.html
+++ b/index.html
@@ -303,6 +303,12 @@ body {
 
 <div class="indicadores2" id="indicadores2"></div>
 
+    <!-- ===== IMAGEM SITE4 ===== -->
+<section class="container-imagem">
+    <img src="site4.JPG" alt="Informações do Produto" class="imagem-topo" draggable="false">
+    <div class="bloqueio"></div>
+</section>
+
 
     
 <script>
