--- a/index.html
+++ b/index.html
@@ -211,13 +211,15 @@ body {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    color: black; /* Pergunta preta */
 }
 
 .faq-icon {
     font-size: 24px;
-    color: #FFD700;
+    color: black; /* + preto */
     transition: transform 0.3s ease;
 }
+
 
 .faq-resposta {
     max-height: 0;
