--- a/index.html
+++ b/index.html
@@ -363,51 +363,51 @@ body {
 
     <div class="faq-item">
         <button class="faq-pergunta">
-            Pergunta 1 aqui
+            Como devo tomar este suplemento?
             <span class="faq-icon">+</span>
         </button>
         <div class="faq-resposta">
-            <p>Resposta da pergunta 1 aqui.</p>
+            <p>Tome duas gomas por dia, de preferência com alimentos, para favorecer a absorção e a eficácia. Recomenda-se o uso diário e consistente para melhores resultados.</p>
         </div>
     </div>
 
     <div class="faq-item">
         <button class="faq-pergunta">
-            Pergunta 2 aqui
+            Quando posso esperar ver os resultados?
             <span class="faq-icon">+</span>
         </button>
         <div class="faq-resposta">
-            <p>Resposta da pergunta 2 aqui.</p>
+            <p>A maioria dos usuários começa a notar melhorias na energia, concentração e desempenho dentro de 2 a 4 semanas de uso regular. Os resultados podem variar dependendo da saúde e do estilo de vida de cada pessoa.</p>
         </div>
     </div>
 
     <div class="faq-item">
         <button class="faq-pergunta">
-            Pergunta 3 aqui
+            É seguro tomar com outros suplementos ou medicamentos?
             <span class="faq-icon">+</span>
         </button>
         <div class="faq-resposta">
-            <p>Resposta da pergunta 3 aqui.</p>
+            <p>Sim, nossa fórmula foi desenvolvida para ser segura e não reativa. No entanto, se você estiver tomando medicamentos controlados ou tiver algum problema de saúde, recomendamos consultar seu médico antes de usar.</p>
         </div>
     </div>
 
     <div class="faq-item">
         <button class="faq-pergunta">
-            Pergunta 4 aqui
+            Existem efeitos colaterais?
             <span class="faq-icon">+</span>
         </button>
         <div class="faq-resposta">
-            <p>Resposta da pergunta 4 aqui.</p>
+            <p>Quando tomado conforme as instruções, os efeitos colaterais são raros. Em doses elevadas, algumas pessoas podem apresentar leve desconforto gastrointestinal. Siga sempre a dosagem recomendada.</p>
         </div>
     </div>
 
     <div class="faq-item">
         <button class="faq-pergunta">
-            Pergunta 5 aqui
+            De onde provém o seu Shilajit?
             <span class="faq-icon">+</span>
         </button>
         <div class="faq-resposta">
-            <p>Resposta da pergunta 5 aqui.</p>
+            <p>Nosso Shilajit é colhido de forma sustentável na região do Himalaia, em altas altitudes, e passa por processos de purificação e testes de qualidade para garantir sua potência e segurança.</p>
         </div>
     </div>
 
