--- a/index.html
+++ b/index.html
@@ -413,6 +413,12 @@ body {
 
 </section>
 
+    <!-- ===== IMAGEM SITE5 ===== -->
+<section class="container-imagem">
+    <img src="site5.JPG" alt="Informações do Produto" class="imagem-topo" draggable="false">
+    <div class="bloqueio"></div>
+</section>
+
 
 
     
