--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gomas de Shilajit do Himalaia</title>
+<title>Gomas de Shilajit do Himalaia - ElixLabs</title>
 
 <style>
 body {
@@ -277,7 +277,7 @@ body {
 
     <!-- ===== BOTÃO COMPRAR AGORA ===== -->
 <div class="botao-comprar-container">
-    <a href="https://seulink.com" class="botao-comprar">
+    <a href="https://seguro.pague.click/api/public/shopify?product=1899569821614&store=18995" class="botao-comprar">
 
         <!-- Ícone Carrinho Branco -->
         <svg xmlns="http://www.w3.org/2000/svg" 
@@ -314,7 +314,7 @@ body {
 
     <!-- ===== BOTÃO COMPRAR AGORA ===== -->
 <div class="botao-comprar-container">
-    <a href="https://seulink.com" class="botao-comprar">
+    <a href="https://seguro.pague.click/api/public/shopify?product=1899569821614&store=18995" class="botao-comprar">
 
         <!-- Ícone Carrinho Branco -->
         <svg xmlns="http://www.w3.org/2000/svg" 
