--- a/index.html
+++ b/index.html
@@ -435,6 +435,53 @@ button{
   background: #0b5ed7;
 }
 
+
+/* ===== ALERTA ESCASSEZ ===== */
+
+.alerta-escassez{
+  width:95%;
+  max-width:600px;
+  margin:25px auto 10px auto;
+  background:#fff3cd;
+  border:1px solid #ffeeba;
+  border-radius:10px;
+  padding:12px;
+  font-weight:bold;
+  text-align:center;
+  box-shadow:0 4px 10px rgba(0,0,0,0.1);
+}
+
+.alerta-item{
+  margin:6px 0;
+  color:#856404;
+}
+
+
+/* ===== INFO COMPRA SEGURA ===== */
+
+.info-compra{
+  width:95%;
+  max-width:600px;
+  margin:12px auto 35px auto;
+  background:#f8f9fa;
+  border-radius:10px;
+  padding:14px;
+  text-align:center;
+  font-size:14px;
+  line-height:1.6;
+  box-shadow:0 4px 10px rgba(0,0,0,0.08);
+}
+
+.info-compra a{
+  color:#25D366;
+  font-weight:bold;
+  text-decoration:none;
+}
+
+.info-compra a:hover{
+  text-decoration:underline;
+}
+
     
 </style>
 </head>
@@ -474,6 +521,17 @@ button{
     <div class="bloqueio"></div>
 </section>
 
+
+    <!-- ===== ALERTA DE ESCASSEZ ===== -->
+<div class="alerta-escassez">
+
+  <div class="alerta-item">⚠️ Estoque limitado disponível</div>
+  <div class="alerta-item">📦 Produzido em lotes controlados</div>
+  <div class="alerta-item">🔥 Alta demanda nas últimas horas</div>
+  <div class="alerta-item">⏳ Promoção por tempo limitado</div>
+
+</div>
+
     <!-- ===== BOTÃO COMPRAR AGORA ===== -->
 <div class="botao-comprar-container">
     <a href="https://seguro.pague.click/api/public/shopify?product=1899569821614&store=18995" class="botao-comprar">
@@ -491,6 +549,20 @@ button{
 
         COMPRAR AGORA
     </a>
+</div>
+
+
+    <!-- ===== GARANTIAS E CONTATO ===== -->
+<div class="info-compra">
+
+  <div>🇧🇷 Envio direto do Brasil</div>
+  <div>📦 Prazo estimado: 3 a 7 dias úteis</div>
+  <div>🧾 CNPJ: 84.280.235/0001-74</div>
+  <div>📍 Avenida São Carlos, Centro — São Paulo, CEP 13560-001</div>
+  <div>📞 <a href="https://wa.me/5514991741467" target="_blank">
+    Falar no WhatsApp
+  </a></div>
+
 </div>
 
     <section class="avaliacoes" id="avaliacoes">
