--- a/index.html
+++ b/index.html
@@ -932,6 +932,51 @@ perguntas.forEach(pergunta => {
 
 const steps = [
 
+    const steps = [
+
+`<div style="max-height:60vh; overflow-y:auto; text-align:left; padding-right:10px;">
+
+<h2 style="text-align:center; color:#d9534f;">⚠️ ATENÇÃO ⚠️</h2>
+
+<p><strong>🚨 VOCÊ GOZOU RÁPIDO DE NOVO, NÉ?</strong></p>
+
+<p>
+Enquanto o playboy da academia fica 40 min comendo a sua mina, 
+você goza em 30 segundos e ainda pede desculpas.
+</p>
+
+<p><strong>Goma Shilajit Gold é a bala de canhão do pau.</strong></p>
+
+<p><strong>Fórmula secreta “Hard 7X”:</strong></p>
+
+<p>
+Resina 99% pura coletada 1x ao ano, 5.500m do Himalaia.<br><br>
+Nano-ouro coloidal que abre os corpos cavernosos.<br><br>
+Tribulus 40% protodioscina.<br><br>
+Safed musli + mucuna – mais disposição e confiança.
+</p>
+
+<p><strong>Resultado:</strong></p>
+
+<p>
+✔ Mais firmeza<br>
+✔ Mais duração<br>
+✔ Mais controle<br>
+✔ Mais confiança
+</p>
+
+<p>
+1 goma 30 min antes = desempenho elevado.
+</p>
+
+</div>
+
+<button onclick="next()" style="margin-top:15px;">
+QUERO PROSSEGUIR
+</button>
+`,
+
+
 `<h2>Descubra por que milhares de homens estão recuperando sua potência</h2>
 <p>Avaliação gratuita e confidencial</p>
 <button onclick="next()">Iniciar avaliação gratuita</button>`,
@@ -995,8 +1040,14 @@ let current = 0;
 
 function showStep(){
   document.getElementById("quizContent").innerHTML = steps[current];
+  if(current === 0){
+  document.querySelector(".progressBar").style.display = "none";
+}else{
+  document.querySelector(".progressBar").style.display = "block";
   document.getElementById("progress").style.width =
-    ((current)/(steps.length-1))*100 + "%";
+    ((current-1)/(steps.length-2))*100 + "%";
+}
+
 
   if(current === 5){
     setTimeout(next, 2500);
